--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
         "whatsapp",
         "js-whatsapp",
         "whatsapp",
-        "guru-bot",
-        "GURU-bot-md",
+        "dinuwa",
+        "QUEEN-HENTAI-md",
         "multi-device",
         "MD",
         "baileys-md"
@@ -44,6 +44,7 @@
         "awesome-phonenumber": "^3.4.0",
         "acrcloud": "^1.4.0",
         "@shineiichijo/marika": "^2.0.6",
+        "aptoide-scraper": "^1.0.1",
         "axios": "^0.24.0",
         "cfonts": "^3.1.1",
         "chalk": "^5.1.0",
@@ -54,6 +55,7 @@
         "file-type": "^18.0.0",
         "fluent-ffmpeg": "^2.1.2",
         "formdata-node": "^5.0.0",
+        "hirunews-scraper": "latest",
         "human-readable": "^0.2.1",
         "instagram-url-direct": "^1.0.12",
         "jsdom": "^20.0.1",
@@ -75,6 +77,7 @@
         "readline": "^1.3.0",
         "similarity": "^1.2.1",
         "g-i-s": "^2.1.6",
+        "@sl-code-lords/esana-news": "latest",
         "socket.io": "^4.5.2",
         "syntax-error": "^1.4.0",
         "terminal-image": "^2.0.0",
